--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>Fill in here</td><td style="color: green;">Fill in here</td><td>Fill in here</td><td style="color: red;">Fill in here</td></tr>
+                <tr><td>Astros</td><td style="color: red;">4</td><td>Diamondbacks</td><td style="color: green;">6</td></tr>
                 <tr><td>Fill in here</td><td style="color: green;">Fill in here</td><td>Fill in here</td><td style="color: red;">Fill in here</td></tr>
                 <tr><td>Fill in here</td><td style="color: green;">Fill in here</td><td>Fill in here</td><td style="color: red;">Fill in here</td></tr>
                 <tr><td>Fill in here</td><td style="color: green;">Fill in here</td><td>Fill in here</td><td style="color: red;">Fill in here</td></tr>
