Enhance wheel spin with highlights and banner

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <canvas id="wheelCanvas" width="500" height="500"></canvas>
             <div class="pointer"></div>
         </div>
+        <div id="winnerBanner" class="banner hidden"></div>
         <button onclick="spinWheel()">Spin the Wheel</button>
         <audio id="spinSound" src="spin.wav"></audio>
         <audio id="winSound" src="retro.wav"></audio>
