--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </tbody>
         </table>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
